knowledgeCity0610/common/log/oldLog/runall_p13068.log.error.log
[CRITICAL]2021-05-11 13:03:05,882: import main_agv failed, path: agvCtrl cause a error: unindent does not match any outer indentation level (jackMgr.py, line 131)
pid=13068, ppid=17848, tid=17576
Traceback (most recent call last):
  File "run_all.py", line 39, in findModule
    __import__(m[1])
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\main_agv.py", line 11, in <module>
    import agvControl
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\agvControl.py", line 10, in <module>
    import agvList
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\agvList.py", line 24, in <module>
    import agvDevice.rotationApi as rotationApi
  File "..\agvDevice\rotationApi.py", line 8, in <module>
    import main_agvDevice
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvDevice\main_agvDevice.py", line 10, in <module>
    import jackMgr
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvDevice\jackMgr.py", line 131
    def jackDownOld(agvId ,timeout):
                                   ^
IndentationError: unindent does not match any outer indentation level

[CRITICAL]2021-05-11 13:03:05,885: import main_agv failed, path: agvCtrl ,cause unindent does not match any outer indentation level (jackMgr.py, line 131)
